--- a/PS5_Display_Pics/PS5_White.css
+++ b/PS5_Display_Pics/PS5_White.css
@@ -1,6 +1,6 @@
 /*BEGIN PS4 Controller Styling*/
 .controller.ds4 {
-    background: url(thanovic.png);
+    background: url(White_SkinNo_Buttons.png);
     height: 700px;
     width: 1200px;
     /*    margin-left: -403px;
